overflow issue resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,7 @@
-@keyframes fade {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes read {
-  0% {
-    opacity: 0;
-  }
-  25% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes heart-beat {
-  0% {
-    transform: translate(-50%, -50%) scale(1, 1);
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(1.25, 1.25);
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1, 1);
-  }
-}
-@keyframes balloon-move {
-  0% {
-    transform: translateY(0) rotate(0);
-  }
-  25% {
-    transform: translateY(5%) rotate(3deg);
-  }
-  50% {
-    transform: translateY(0) rotate(0);
-  }
-  75% {
-    transform: translateY(-5%) rotate(-3deg);
-  }
-  100% {
-    transform: translateY(0) rotate(0);
-  }
-}
-@keyframes move-up {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-100%);
-  }
-}
-.hidden {
-  display: none;
-}
-
-.fade-in {
-  animation: fade 2s ease-in 0s;
-}
-
-.appear {
-  animation: fade 2s linear 0s 1 reverse;
-}
-
-.read {
-  animation: read 4s linear 0s;
-}
-
-.move-up {
-  animation: move-up 80s linear 3s;
-}
-
 .content {
   height: 100vh;
   overflow: hidden;
+  position: absolute;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 30vh 70vh;
@@ -90,7 +13,8 @@
 .frame {
   grid-row: 2/3;
   grid-column: 2/4;
-  display: flex;
+  display: none;
+  opacity: 0;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -119,7 +43,6 @@ body {
 .balloon {
   grid-row: 1/-1;
   width: 130%;
-  z-index: 1;
 }
 .balloon--left {
   grid-column: 1/2;
@@ -216,6 +139,84 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(0%);
+}
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes read {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes heart-beat {
+  0% {
+    transform: translate(-50%, -50%) scale(1, 1);
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.25, 1.25);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1, 1);
+  }
+}
+@keyframes balloon-move {
+  0% {
+    transform: translateY(0) rotate(0);
+  }
+  25% {
+    transform: translateY(5%) rotate(3deg);
+  }
+  50% {
+    transform: translateY(0) rotate(0);
+  }
+  75% {
+    transform: translateY(-5%) rotate(-3deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+@keyframes move-up {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+.hidden {
+  display: none;
+}
+
+.fade-in {
+  animation: fade 2s ease-in 0s;
+}
+
+.appear {
+  animation: fade 2s linear 0s 1 reverse;
+}
+
+.read {
+  animation: read 4s linear 0s;
+}
+
+.move-up {
+  animation: move-up 80s linear 3s;
 }
 
 /*# sourceMappingURL=style.css.map */
