--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -3,7 +3,7 @@
 .balloon{
     grid-row: 1 / -1;
     width: 130%;
-    z-index: 1;
+    // z-index: 1;
     
     &--left {
         grid-column: 1/2;
