--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,6 +1,7 @@
 .content{
     height: 100vh;
     overflow: hidden;
+    position: absolute;
 
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -15,7 +16,8 @@
     grid-row: 2/3;
     grid-column: 2/4;
 
-    display: flex;
+    display: none;
+    opacity: 0;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
